[gd_scene load_steps=5 format=3 uid="uid://cbkgvw8xo2bh"]

[ext_resource type="FontFile" uid="uid://djd71xqk81edx" path="res://assets/fonts/Kenney Mini Square Mono.ttf" id="1_5omei"]
[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="1_wsofq"]
[ext_resource type="Texture2D" uid="uid://cdgmc2183y3f1" path="res://assets/background/backgroundmenu.png" id="2_ru3ww"]
[ext_resource type="Texture2D" uid="uid://bebd5qqcl4yf8" path="res://assets/sprites/cut/camilla.png" id="4_6p5nx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsofq")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(559, 322)
scale = Vector2(5.2, 5.2)
texture = ExtResource("2_ru3ww")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 182.0
offset_right = 626.0
offset_bottom = 471.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 190.0
offset_right = 618.0
offset_bottom = 461.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 3.0
offset_right = 611.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Start tattooing" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5omei")
theme_override_font_sizes/font_size = 32
text = "Empezar a tatuar!"
alignment = 0

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5omei")
theme_override_font_sizes/font_size = 32
text = "TUTORIAL"
alignment = 0

[node name="Mute" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5omei")
theme_override_font_sizes/font_size = 32
text = "Silenciar"
alignment = 0

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5omei")
theme_override_font_sizes/font_size = 32
text = "Cr√©ditos
"
alignment = 0

[node name="Quit the job" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5omei")
theme_override_font_sizes/font_size = 32
text = "Dejar el curro!"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(907, 378)
scale = Vector2(2.2, 2.2)
texture = ExtResource("4_6p5nx")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start tattooing" to="." method="_on_start_tattooing_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit the job" to="." method="_on_quit_the_job_pressed"]
